--- a/src/frontend/www/index.css
+++ b/src/frontend/www/index.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: "Roboto";
+  src: url(./fonts/Roboto-Regular.ttf);
+}
+@font-face {
+  font-family: "Roboto bold";
+  src: url(./fonts/Roboto-Bold.ttf);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -14,7 +23,7 @@ code {
 
 * {
   box-sizing: border-box;
-  font-family: Roboto;
+  font-family: "Roboto";
   outline: none;
 }
 
