--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -1,11 +1,11 @@
-@font-face {
+/* @font-face {
   font-family: "Roboto";
   src: url(./fonts/Roboto-Regular.ttf);
 }
 @font-face {
   font-family: "Roboto bold";
   src: url(./fonts/Roboto-Bold.ttf);
-}
+} */
 
 body {
   margin: 0;
