--- a/src/frontend/components/TokenIssue.css
+++ b/src/frontend/components/TokenIssue.css
@@ -81,3 +81,26 @@
   justify-content: space-between;
   flex-flow: row wrap;
 }
+.TokenIssue .tokens .tokens-list svg.spinner {
+  display: block;
+  width: 5rem;
+  height: 5rem;
+  margin: 6rem auto;
+  opacity: 0.7;
+  animation: spin 1500ms linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.TokenIssue .tokens .tokens-list .zero {
+  width: 100%;
+  font-size: 3.2rem;
+  text-align: center;
+  color: #595959;
+  opacity: 0.5;
+}
