--- a/src/frontend/components/Wallet.css
+++ b/src/frontend/components/Wallet.css
@@ -14,14 +14,25 @@
   padding-bottom: 1.9rem;
 }
 .Wallet .balance p {
+  position: relative;
   margin: 0;
 }
-.Wallet .balance p svg{
+.Wallet .balance p svg.dollar {
   display: inline-block;
   width: 1.4rem;
   height: 2.8rem;
   vertical-align: top;
   margin-top: 1.2rem;
+}
+.Wallet .balance p svg.spinner {
+  position: absolute;
+  width: 5rem;
+  height: 5rem;
+  top: 1.2rem;
+  left: 4rem;
+  opacity: 0.7;
+  transform: translate(2rem, 1.5rem);
+  animation: spin 1500ms linear infinite;
 }
 .Wallet .balance p span {
   padding-left: 1rem;
@@ -44,4 +55,28 @@
   display: flex;
   justify-content: space-between;
   flex-flow: row wrap;
+}
+.Wallet .tokens .tokens-list svg.spinner {
+  display: block;
+  width: 5rem;
+  height: 5rem;
+  margin: 6rem auto;
+  opacity: 0.7;
+  animation: spin 1500ms linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.Wallet .tokens .tokens-list .zero {
+  width: 100%;
+  font-size: 3.2rem;
+  text-align: center;
+  color: #595959;
+  opacity: 0.5;
+  cursor: default;
 }
