--- a/src/frontend/components/Wallet.css
+++ b/src/frontend/components/Wallet.css
@@ -1,6 +1,12 @@
 .Wallet {
+  position: relative;
   width: 100%;
   padding-top: 11.5rem;
+}
+.Wallet .UserPrincipalDisplayer {
+  position: absolute;
+  top: 3rem;
+  right: 5rem
 }
 .Wallet .balance {
   margin-left: 34rem;
@@ -51,11 +57,11 @@
   color: #595959;
   padding-bottom: 6rem;
 }
-.Wallet .tokens .tokens-list {
+/* .Wallet .tokens .tokens-list {
   display: flex;
   justify-content: space-between;
   flex-flow: row wrap;
-}
+} */
 .Wallet .tokens .tokens-list svg.spinner {
   display: block;
   width: 5rem;
