--- a/src/frontend/components/Header.css
+++ b/src/frontend/components/Header.css
@@ -10,6 +10,14 @@
   height: 100%;
   padding: 0 10rem;
 }
+.Header .wrap .brand {
+  width: 28.3rem;
+  height: 8.3rem;
+}
+.Header .wrap .brand svg {
+  width: 100%;
+  height: 100%;
+}
 .Header .wrap .nav-wrap {
   margin-left: 11rem;
 }
