--- a/src/frontend/components/TokenItem.css
+++ b/src/frontend/components/TokenItem.css
@@ -3,7 +3,7 @@
   width: 33.8rem;
   height: 17.5rem;
   padding: 2rem 0;
-  margin-bottom: 6rem;
+  margin: 0 auto 6rem auto;
 }
 .Token .bg {
   position: absolute;
