--- a/src/frontend/components/UserPrincipalDisplayer.css
+++ b/src/frontend/components/UserPrincipalDisplayer.css
@@ -3,22 +3,29 @@
   display: inline-block;
   height: 3rem;
 }
+.UserPrincipalDisplayer .group {
+  display: flex;
+  height: 2.4rem;
+  align-items: center;
+}
 .UserPrincipalDisplayer span.label {
   display: inline-block;
-  line-height: 3rem;
+  line-height: 2.4rem;
   font-size: 2rem;
   padding-right: 1.2rem;
   color: #001414;
+  cursor: default;
 }
 .UserPrincipalDisplayer button {
   vertical-align: top;
-  width: 2.2rem;
-  height: 2.2rem;
+  width: 2.4rem;
+  height: 2.4rem;
   padding: 0;
   border: none;
   background-color: transparent;
   opacity: 0.2;
   cursor: pointer;
+  margin-left: 0.8rem;
 }
 .UserPrincipalDisplayer button:hover {
   opacity: 0.5;
@@ -35,6 +42,102 @@
   color: #001414;
 }
 .UserPrincipalDisplayer input {
+  position: absolute;
   opacity: 0;
   pointer-events: none;
+}
+.UserPrincipalDisplayer .ExportWalletModal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  z-index: 1000;
+}
+.UserPrincipalDisplayer .ExportWalletModal.ac {
+  pointer-events: all;
+}
+.UserPrincipalDisplayer .ExportWalletModal .bg {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  transition: opacity 180ms ease;
+}
+.UserPrincipalDisplayer .ExportWalletModal.ac .bg {
+  opacity: 1;
+}
+.UserPrincipalDisplayer .ExportWalletModal .wrap {
+  position: absolute;
+  width: 66rem;
+  height: 58rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 200ms ease-out,
+    opacity 180ms ease;
+  border-radius: 3rem;
+  background-color: #FFF;
+  box-shadow: 0 0.3rem 1.3rem rgba(0, 0, 0, 0.5);
+  padding: 3.5rem 7rem 3rem 7rem;
+  opacity: 0;
+}
+.UserPrincipalDisplayer .ExportWalletModal.ac .wrap {
+  opacity: 1;
+  transform: translate(-55%, -50%);
+}
+.UserPrincipalDisplayer .ExportWalletModal.ac .wrap button.close {
+  position: absolute;
+  top: 3rem;
+  right: 3rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  opacity: 0.3;
+  transition: opacity 120ms ease;
+}
+.UserPrincipalDisplayer .ExportWalletModal.ac .wrap button.close:hover {
+  opacity: 0.6;
+}
+.UserPrincipalDisplayer .ExportWalletModal.ac .wrap label.label {
+  display: block;
+  font-size: 3.2rem;
+  font-family: "Roboto bold";
+  margin-left: -3.5rem;
+  color: #001414;
+}
+.UserPrincipalDisplayer .ExportWalletModal.ac .wrap label.sub-label {
+  display: block;
+  font-size: 1.8rem;
+  font-family: "Roboto bold";
+  margin-top: 3.5rem;
+  margin-bottom: 1rem;
+  color: #001414;
+}
+.UserPrincipalDisplayer .ExportWalletModal.ac .wrap .input-group {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 2rem;
+}
+.UserPrincipalDisplayer .ExportWalletModal.ac .wrap input {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+}
+.UserPrincipalDisplayer .ExportWalletModal.ac .wrap .input-group span {
+  word-break: break-all;
+  display: block;
+  flex: 1;
+  min-height: 3.8rem;
+  max-height: 10rem;
+  margin-right: 2rem;
+  line-height: 2.8rem;
+  color: #8B8B8B;
+  cursor: default;
 }
