--- a/src/frontend/components/SwapRelated/Swap.css
+++ b/src/frontend/components/SwapRelated/Swap.css
@@ -16,6 +16,7 @@
   background-color: #EEE;
   box-shadow: 0 0.3rem 1.2rem rgba(0, 0, 0, 0.14),
     0rem 0.3rem 1.2rem rgba(0, 0, 0, 0.14) inset;
+  z-index: 100;
 }
 .Swap .SwapHeader .Nav {
   height: 100%;
@@ -38,6 +39,13 @@
   top: 18.3rem;
   background-color: #E8E8E8;
   overflow-y: auto;
+}
+/* .SwapExchange::-webkit-scrollbar,
+.SwapLiquidity::-webkit-scrollbar {
+  width: 2rem;
+} */
+.SwapExchange .wrap {
+  z-index: 100;
 }
 .SwapExchange .wrap,
 .SwapLiquidity .SwapLiquidityPage {
@@ -119,6 +127,7 @@
 }
 .SwapExchange .SwapExchangeInputGroup .input-group .select-group,
 .SwapLiquidity .SwapExchangeInputGroup .input-group .select-group {
+  position: relative;
   width: 13.4rem;
   height: 100%;
 }
@@ -162,7 +171,7 @@
 .SwapExchange .SwapExchangeInputGroup .input-group .select-group .option-wrap,
 .SwapLiquidity .SwapExchangeInputGroup .input-group .select-group .option-wrap {
   position: absolute;
-  width: 13.4rem;
+  width: 100%;
   max-height: 16rem;
   border: 0.1rem solid #E8E8E8;
   box-shadow: 0 0.2rem 0.6rem rgba(0, 0, 0, 0.14);
@@ -619,4 +628,17 @@
   color: crimson;
   font-size: 1.8rem;
   text-align: center;
+}
+
+.LiquidityAnimation,
+.SwapAnimation {
+  position: fixed;
+  bottom: -3px;
+  left: 0;
+  pointer-events: none;
+}
+.LiquidityAnimation .container,
+.SwapAnimation .container {
+  width: 100%;
+  height: 100%;
 }
