--- a/src/frontend/components/Header.css
+++ b/src/frontend/components/Header.css
@@ -1,7 +1,7 @@
 .Header {
   width: 100%;
   height: 11rem;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 .Header .wrap {
   display: flex;
@@ -20,6 +20,10 @@
 }
 .Header .wrap .nav-wrap {
   margin-left: 11rem;
+}
+.Header .AuthMenu {
+  position: absolute;
+  right: 10rem;
 }
 .Nav {
   position: relative;
