--- a/src/frontend/src/components/SwapRelated/LiquidityList.css
+++ b/src/frontend/src/components/SwapRelated/LiquidityList.css
@@ -12,11 +12,11 @@
 .LiquidityList .scroll-wrap::-webkit-scrollbar {
   width: 0.8rem;
   border-radius: 1rem;
-  background-color: #D3D3D3;
+  background-color: #d3d3d3;
   box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.2) inset;
 }
 .LiquidityList .scroll-wrap::-webkit-scrollbar-thumb {
-  background-color: #FAFAFA;
+  background-color: #fafafa;
   border-radius: 1rem;
 }
 .LiquidityList label.main-title {
@@ -38,7 +38,7 @@
   display: block;
   text-align: center;
   font-size: 2rem;
-  color: #8B8B8B;
+  color: #8b8b8b;
   padding: 2rem 0;
   cursor: default;
 }
@@ -62,7 +62,7 @@
 .LiquidityList .LiquidityItem span.id {
   display: block;
   font-size: 2rem;
-  color: #6B6B6B;
+  color: #6b6b6b;
 }
 .LiquidityList .LiquidityItem button {
   padding: 0.8rem 2rem;
@@ -70,12 +70,12 @@
   border: none;
   border-radius: 1rem;
   font-size: 1.8rem;
-  background-color: #D3D3D3;
+  background-color: #d3d3d3;
   color: #fff;
   cursor: pointer;
 }
 .LiquidityList .LiquidityItem button:hover {
-  background-image: linear-gradient(115deg, #E12B7C, #323A8D);
+  background-image: linear-gradient(115deg, #e12b7c, #323a8d);
   box-shadow: 0 0.3rem 1.3rem rgba(0, 0, 0, 0.2);
 }
 .LiquidityList .RemoveLiquidityModal {
@@ -88,6 +88,7 @@
 }
 .LiquidityList .RemoveLiquidityModal.ac {
   pointer-events: all;
+  z-index: 100;
 }
 .LiquidityList .RemoveLiquidityModal .bg {
   width: 100%;
@@ -106,10 +107,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  transition: transform 200ms ease-out,
-    opacity 180ms ease;
+  transition: transform 200ms ease-out, opacity 180ms ease;
   border-radius: 3rem;
-  background-color: #FFF;
+  background-color: #fff;
   box-shadow: 0 0.3rem 1.3rem rgba(0, 0, 0, 0.5);
   padding: 3.5rem 7rem 3rem 7rem;
   opacity: 0;
@@ -152,19 +152,19 @@
 .LiquidityList .RemoveLiquidityModal.ac .wrap input {
   width: 100%;
   height: 5.8rem;
-  border: 0.2rem solid #E3E3E3;
+  border: 0.2rem solid #e3e3e3;
   border-radius: 1rem;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   font-size: 3.2rem;
   font-family: "Roboto bold";
   padding: 0 2rem;
 }
 .LiquidityList .RemoveLiquidityModal.ac .wrap input::placeholder {
-  color: #B8B8B8;
+  color: #b8b8b8;
 }
 .LiquidityList .RemoveLiquidityModal.ac .wrap input.error {
-  background-color: #FFF4FA;
-  border-color: #E9A4C7;
+  background-color: #fff4fa;
+  border-color: #e9a4c7;
 }
 .LiquidityList .RemoveLiquidityModal.ac .wrap .balance-ctrl {
   text-align: right;
@@ -173,14 +173,14 @@
 .LiquidityList .RemoveLiquidityModal.ac .wrap .balance-ctrl span {
   font-size: 1.8rem;
   line-height: 2.6rem;
-  color: #B8B8B8;
+  color: #b8b8b8;
   vertical-align: middle;
 }
 .LiquidityList .RemoveLiquidityModal.ac .wrap .balance-ctrl button {
   height: 2.6rem;
   margin-left: 2rem;
   border: none;
-  color: #B8B8B8;
+  color: #b8b8b8;
   background-color: transparent;
   border-radius: 1rem;
   font-size: 1.4rem;
@@ -198,14 +198,14 @@
   height: 7rem;
   font-size: 4.6rem;
   font-family: "Roboto bold";
-  color: #FFF;
+  color: #fff;
   border: none;
   border-radius: 2rem;
   cursor: pointer;
-  background-image: linear-gradient(115deg, #E12B7C, #323A8D);
+  background-image: linear-gradient(115deg, #e12b7c, #323a8d);
 }
 .LiquidityList .RemoveLiquidityModal.ac .wrap button.submit:disabled {
-  background-color: #E3E3E3;
+  background-color: #e3e3e3;
   background-image: none;
   cursor: not-allowed;
 }
