--- a/src/frontend/src/components/ConnectWallet.css
+++ b/src/frontend/src/components/ConnectWallet.css
@@ -3,7 +3,9 @@
   margin: 10vh auto 0 auto;
 }
 .ConnectWallet button {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 4vw;
   border: none;
@@ -17,4 +19,14 @@
 }
 .ConnectWallet button:hover {
   box-shadow: 0 3px 12px #323a8d;
+}
+.ConnectWallet button span.dfinity {
+  display: inline-block;
+  width: 3vw;
+  height: 3vw;
+  background-image: url(../images/dfinity.svg);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-left: 0.3vw;
 }
