--- a/src/frontend/src/components/TokenList.css
+++ b/src/frontend/src/components/TokenList.css
@@ -18,6 +18,7 @@
 }
 .TokenListModal.ac {
   pointer-events: all;
+  z-index: 100;
 }
 .TokenListModal .bg {
   width: 100%;
@@ -36,10 +37,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  transition: transform 200ms ease-out,
-    opacity 180ms ease;
+  transition: transform 200ms ease-out, opacity 180ms ease;
   border-radius: 3rem;
-  background-color: #FFF;
+  background-color: #fff;
   box-shadow: 0 0.3rem 1.3rem rgba(0, 0, 0, 0.5);
   padding: 3.5rem 7rem 3rem 7rem;
   opacity: 0;
@@ -82,19 +82,19 @@
 .TokenListModal .wrap input {
   width: 100%;
   height: 5.8rem;
-  border: 0.2rem solid #E3E3E3;
+  border: 0.2rem solid #e3e3e3;
   border-radius: 1rem;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   font-size: 3.2rem;
   font-family: "Roboto bold";
   padding: 0 2rem;
 }
 .TokenListModal .wrap input::placeholder {
-  color: #B8B8B8;
+  color: #b8b8b8;
 }
 .TokenListModal .wrap input.err {
-  background-color: #FFF4FA;
-  border-color: #E9A4C7;
+  background-color: #fff4fa;
+  border-color: #e9a4c7;
 }
 .TokenListModal .wrap .balance-ctrl {
   text-align: right;
@@ -103,14 +103,14 @@
 .TokenListModal .wrap .balance-ctrl span {
   font-size: 1.8rem;
   line-height: 2.6rem;
-  color: #B8B8B8;
+  color: #b8b8b8;
   vertical-align: middle;
 }
 .TokenListModal .wrap .balance-ctrl button {
   height: 2.6rem;
   margin-left: 2rem;
   border: none;
-  color: #B8B8B8;
+  color: #b8b8b8;
   background-color: transparent;
   border-radius: 1rem;
   font-size: 1.4rem;
@@ -128,14 +128,14 @@
   height: 7rem;
   font-size: 4.6rem;
   font-family: "Roboto bold";
-  color: #FFF;
+  color: #fff;
   border: none;
   border-radius: 2rem;
   cursor: pointer;
-  background-image: linear-gradient(115deg, #E12B7C, #323A8D);
+  background-image: linear-gradient(115deg, #e12b7c, #323a8d);
 }
 .TokenListModal .wrap button.submit:disabled {
-  background-color: #E3E3E3;
+  background-color: #e3e3e3;
   background-image: none;
   cursor: not-allowed;
 }
