--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -1,6 +1,7 @@
 .Layout {
   position: relative;
   width: 100%;
+  height: 100%;
 }
 .Layout .layout-bg {
   position: absolute;
@@ -40,4 +41,7 @@
 }
 .Layout .layout-bg.status2 svg.accessory-2 {
   top: 0;
+}
+
+.test::-webkit-scrollbar-thumb {
 }
